environments/gloo-gateway/gateway-api/1.18/ai-gateway/auth-and-rl-demo/demo/route/qwen-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ollama-qwen
  namespace: gloo-system
spec:
  parentRefs:
  - name: ai-gateway
    namespace: gloo-system
  rules:
  - backendRefs:
    - group: gloo.solo.io
      kind: Upstream
      name: ollama-qwen-0.5-upstream
      namespace: gloo-system
      weight: 100
    filters:
    - extensionRef:
        group: gateway.solo.io
        kind: RouteOption
        name: ollama-qwen-route-policies
      type: ExtensionRef
    matches:
    - path:
        type: PathPrefix
        value: /qwen
